# face-grpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
py/: client.py  export.py  model.py  onnx_export.sh  protoc.sh  run_client.sh
sh/: make.sh  protoc.sh  run_client.sh  run_server.sh  trt_export.sh
src/: client.cpp  engine.cpp  engine.hpp  server.cpp  service.proto  utils.cpp  utils.hpp
